--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
+        <i class="fas fa-angle-up">^</i>
     </div>
     <nav class="navbar">
         <div class="max-width">
