--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
     </section>
     <footer>
-        <span>Created by <a href="#">GowthamMandala</a><span class="far fa-copyright"></span> 2022 All rights are
+        <span>Created by <a href="#">GowthamMandala</a> © 2023 All rights are
             reserved.</span>
     </footer>
 
