Update index.html change for copyright name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a
-                    href="https://en.wikipedia.org/wiki/Self-financing_portfolio">Myself<span>.co</span></a></div>
+                    href="#">Myself<span>.co</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -330,7 +330,7 @@
         </div>
     </section>
     <footer>
-        <span>Created by <a href="#">GowthamMandala</a> © 2023 All rights are
+        <span>Created by <a href="https://www.linkedin.com/in/mandala-gowtham-kumar-393669217">GowthamMandala</a> © 2023 All rights are
             reserved.</span>
     </footer>
 
